[tool.poetry]
name = "gitignoregen"
version = "0.1.0"
description = ""
authors = ["Patrik Laurell <patrik.laurell@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
prompt-toolkit = "^3.0.47"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
